--- a/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem.csproj
@@ -103,6 +103,13 @@
     <Compile Include="ProductRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shipping.cs" />
+    <Compile Include="FrmShippingList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmShippingList.Designer.cs">
+      <DependentUpon>FrmShippingList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users.cs" />
     <EmbeddedResource Include="FrmAddProd.resx">
       <DependentUpon>FrmAddProd.cs</DependentUpon>
@@ -128,6 +135,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FrmShippingList.resx">
+      <DependentUpon>FrmShippingList.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
