--- a/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem.csproj
@@ -99,10 +99,10 @@
     <Compile Include="FrmProdList.Designer.cs">
       <DependentUpon>FrmProdList.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\FrmSelectItem.cs">
+    <Compile Include="FrmSelectItem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\FrmSelectItem.Designer.cs">
+    <Compile Include="FrmSelectItem.Designer.cs">
       <DependentUpon>FrmSelectItem.cs</DependentUpon>
     </Compile>
     <Compile Include="Product.cs" />
@@ -132,7 +132,7 @@
     <EmbeddedResource Include="FrmProdList.resx">
       <DependentUpon>FrmProdList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\FrmSelectItem.resx">
+    <EmbeddedResource Include="FrmSelectItem.resx">
       <DependentUpon>FrmSelectItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -174,6 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="GUI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.1\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.1\build\net451\System.Data.SQLite.Core.targets')" />
